--- a/projects/projects.json
+++ b/projects/projects.json
@@ -2,7 +2,7 @@
    {
     "name": "Instagram MERN",
     "desc": "Full-Stack Instagram clone built using MERN stack and realtime chat with the help of socket.iO",
-    "image": "flipkartmern",
+    "image": "flipkartmern.png",
     "category": "mern",
     "links": {
       "view": "https://instagramernstack.herokuapp.com/",
